--- a/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,9 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: sparkify@sparkify_dw'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "\n",
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +351,7 @@
        "  'DBName': 'sparkify_dw',\n",
        "  'Endpoint': {'Address': 'dwhcluster.cnoetczdeddb.us-west-2.redshift.amazonaws.com',\n",
        "   'Port': 5439},\n",
-       "  'ClusterCreateTime': datetime.datetime(2020, 6, 17, 0, 18, 48, 125000, tzinfo=tzutc()),\n",
+       "  'ClusterCreateTime': datetime.datetime(2020, 6, 19, 2, 37, 44, 940000, tzinfo=tzutc()),\n",
        "  'AutomatedSnapshotRetentionPeriod': 1,\n",
        "  'ManualSnapshotRetentionPeriod': -1,\n",
        "  'ClusterSecurityGroups': [],\n",
@@ -351,7 +362,7 @@
        "  'ClusterSubnetGroupName': 'default',\n",
        "  'VpcId': 'vpc-674bd61f',\n",
        "  'AvailabilityZone': 'us-west-2b',\n",
-       "  'PreferredMaintenanceWindow': 'sun:11:00-sun:11:30',\n",
+       "  'PreferredMaintenanceWindow': 'sun:13:00-sun:13:30',\n",
        "  'PendingModifiedValues': {},\n",
        "  'ClusterVersion': '1.0',\n",
        "  'AllowVersionUpgrade': True,\n",
@@ -364,18 +375,18 @@
        "    'ApplyStatus': 'in-sync'}],\n",
        "  'MaintenanceTrackName': 'current',\n",
        "  'DeferredMaintenanceWindows': [],\n",
-       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 6, 21, 11, 0, tzinfo=tzutc())},\n",
-       " 'ResponseMetadata': {'RequestId': 'd8b0e580-7d5c-49a1-83ff-b1f425e2a174',\n",
+       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 6, 21, 13, 0, tzinfo=tzutc())},\n",
+       " 'ResponseMetadata': {'RequestId': '082db765-bdf2-4460-af2c-e1d0dd5bf301',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'd8b0e580-7d5c-49a1-83ff-b1f425e2a174',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '082db765-bdf2-4460-af2c-e1d0dd5bf301',\n",
        "   'content-type': 'text/xml',\n",
        "   'content-length': '2391',\n",
        "   'vary': 'accept-encoding',\n",
-       "   'date': 'Wed, 17 Jun 2020 01:55:12 GMT'},\n",
+       "   'date': 'Fri, 19 Jun 2020 02:47:08 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +418,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mClusterNotFoundFault\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-e9d25e5a8ef9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m cluster_status = redshift.describe_clusters(\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mClusterIdentifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCLUSTER_IDENTIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcluster_status\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Clusters'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ClusterStatus'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-17-e9d25e5a8ef9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m cluster_status = redshift.describe_clusters(\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mClusterIdentifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCLUSTER_IDENTIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcluster_status\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Clusters'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ClusterStatus'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_api_call\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    274\u001b[0m                     \"%s() only accepts keyword arguments.\" % py_operation_name)\n\u001b[0;32m    275\u001b[0m             \u001b[1;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[1;34m(self, operation_name, api_params)\u001b[0m\n\u001b[0;32m    584\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Code\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    585\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 586\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    587\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    588\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mClusterNotFoundFault\u001b[0m: An error occurred (ClusterNotFound) when calling the DescribeClusters operation: Cluster dwhcluster not found."
@@ -432,22 +443,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': '8209fe72-6174-4258-bfa5-5077bc4130a1',\n",
+       "{'ResponseMetadata': {'RequestId': 'e59b8faa-abf7-4b3e-8438-414de81d5e23',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '8209fe72-6174-4258-bfa5-5077bc4130a1',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'e59b8faa-abf7-4b3e-8438-414de81d5e23',\n",
        "   'content-type': 'text/xml',\n",
        "   'content-length': '200',\n",
-       "   'date': 'Wed, 17 Jun 2020 01:58:23 GMT'},\n",
+       "   'date': 'Fri, 19 Jun 2020 02:55:52 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
