--- a/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "'Connected: sparkify@sparkify_dw'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "  'DBName': 'sparkify_dw',\n",
        "  'Endpoint': {'Address': 'dwhcluster.cnoetczdeddb.us-west-2.redshift.amazonaws.com',\n",
        "   'Port': 5439},\n",
-       "  'ClusterCreateTime': datetime.datetime(2020, 6, 28, 0, 39, 43, 491000, tzinfo=tzutc()),\n",
+       "  'ClusterCreateTime': datetime.datetime(2020, 6, 30, 1, 2, 59, 588000, tzinfo=tzutc()),\n",
        "  'AutomatedSnapshotRetentionPeriod': 1,\n",
        "  'ManualSnapshotRetentionPeriod': -1,\n",
        "  'ClusterSecurityGroups': [],\n",
@@ -361,8 +361,8 @@
        "    'ParameterApplyStatus': 'in-sync'}],\n",
        "  'ClusterSubnetGroupName': 'default',\n",
        "  'VpcId': 'vpc-674bd61f',\n",
-       "  'AvailabilityZone': 'us-west-2c',\n",
-       "  'PreferredMaintenanceWindow': 'sun:07:00-sun:07:30',\n",
+       "  'AvailabilityZone': 'us-west-2d',\n",
+       "  'PreferredMaintenanceWindow': 'sat:08:30-sat:09:00',\n",
        "  'PendingModifiedValues': {},\n",
        "  'ClusterVersion': '1.0',\n",
        "  'AllowVersionUpgrade': True,\n",
@@ -375,18 +375,18 @@
        "    'ApplyStatus': 'in-sync'}],\n",
        "  'MaintenanceTrackName': 'current',\n",
        "  'DeferredMaintenanceWindows': [],\n",
-       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 6, 28, 7, 0, tzinfo=tzutc())},\n",
-       " 'ResponseMetadata': {'RequestId': '5dc70271-19ff-4abf-9d8c-edbde9e324bb',\n",
+       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 7, 4, 8, 30, tzinfo=tzutc())},\n",
+       " 'ResponseMetadata': {'RequestId': '7ad275a3-4f11-4c67-a346-a569d5dd0177',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': '5dc70271-19ff-4abf-9d8c-edbde9e324bb',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '7ad275a3-4f11-4c67-a346-a569d5dd0177',\n",
        "   'content-type': 'text/xml',\n",
        "   'content-length': '2391',\n",
        "   'vary': 'accept-encoding',\n",
-       "   'date': 'Sun, 28 Jun 2020 02:41:21 GMT'},\n",
+       "   'date': 'Tue, 30 Jun 2020 02:27:35 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,20 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ClusterNotFoundFault",
-     "evalue": "An error occurred (ClusterNotFound) when calling the DescribeClusters operation: Cluster dwhcluster not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mClusterNotFoundFault\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-e9d25e5a8ef9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m cluster_status = redshift.describe_clusters(\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mClusterIdentifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCLUSTER_IDENTIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcluster_status\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Clusters'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ClusterStatus'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_api_call\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    274\u001b[0m                     \"%s() only accepts keyword arguments.\" % py_operation_name)\n\u001b[0;32m    275\u001b[0m             \u001b[1;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[1;34m(self, operation_name, api_params)\u001b[0m\n\u001b[0;32m    584\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Code\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    585\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 586\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    587\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    588\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mClusterNotFoundFault\u001b[0m: An error occurred (ClusterNotFound) when calling the DescribeClusters operation: Cluster dwhcluster not found."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleting\n"
      ]
     }
    ],
